<resources>
    <string name="app_name">To-do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="appName">To-do</string>
    <string name="edit">edit</string>
    <string name="add_a_task">Add a task</string>
    <string name="add">Add</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title_activity_listdetails">activity_listdetails</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_list__item">Activity_list_Item</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="textviewtaskname">taskname</string>
    <string name="textviewDate">TextViewDate</string>
    <string name="update">Update</string>
    <string name="to_do">To-Do</string>
    <string name="delete_a_task">Delete a task</string>
    <string name="do_you_want_to_delete_the_task">Do you want to delete the task?</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="date_descending">Date Descending</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="sort">Sort</string>
    <string name="completed">Completed</string>
    <string name="to_do_list">To-do List</string>
    <string name="to_doa">To-do</string>
</resources>